# small_memory_tree

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  conanfile.py  conanfile.txt  oldPerformance
cmake/: Hardening.cmake  Linker.cmake  Tests.cmake
small_memory_tree/: CMakeLists.txt  apiError.hxx  dataFromVector.hxx  generateStTree.hxx  generateStlplusTree.hxx  smallMemoryTree.hxx  smallMemoryTreeAdapter.hxx  smallMemoryTreeLotsOfChildren.hxx  small_memory_tree.hxx  stTree.hxx  stlplusTree.hxx  treeToVector.hxx  util.hxx  vectorToTree.hxx
src/: CMakeLists.txt  dataFromVector.hxx  smallMemoryTree.hxx  treeToVector.hxx  util.hxx  vectorToTree.hxx
test/: CMakeLists.txt  benchmarkTest.cxx  childrenByPath.cxx  dataFromVector.cxx  generateStTree.cxx  generateTree.cxx  smallMemoryTree.cxx  smallMemoryTreeAdapter.cxx  smallMemoryTreeLotsOfChildren.cxx  stTree.cxx  stlplusTree.cxx  treeToVectorToTree.cxx  treeToVectorToTree2.cxx
